# fuzzy-search-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
benches/: fuzzy_search.rs
docs/: index.html
src/: lib.rs  main.rs
